<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2010 Technische Universität Dresden
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
  	http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  
  Dresden, University of Technology, Faculty of Computer Science
  Computer Networks Group: http://www.rn.inf.tu-dresden.de
  mobilis project: http://mobilisplatform.sourceforge.net
-->
<resources>

    <string name="app_name">MobilisXHunt</string>
    <string name="default_jid_server">mobilis@mobilis.inf.tu-dresden.de/Coordinator</string>
    <string name="bundle_key_newgame_name">key_newgame_name</string>
    <string name="bundle_key_newgame_maxplayers">key_newgame_maxplayers</string>
    <string name="bundle_key_newgame_minplayers">key_newgame_minplayers</string>
    <string name="bundle_key_newgame_password">key_newgame_password</string>
    <string name="bundle_key_newgame_rounds">key_newgame_rounds</string>
    <string name="bundle_key_newgame_starttimer">key_newgame_starttimer</string>
    <string name="bundle_key_newgame_pollinginterval">key_newgame_pollingtimer</string>
    <string name="bundle_key_newgame_usepassword">key_newgame_usepassword</string>
    <string name="bundle_key_settings_serverjid">key_settings_serverjid</string>
    <string name="bundle_key_settings_username">key_settings_username</string>
    <string name="bundle_key_settings_staticmode">key_settings_staticmode</string>
    <string name="bundle_key_settings_logging">key_settings_logging</string>
    <string name="bundle_key_settings_deletelogs">key_settings_deletelogs</string>
    <string name="main_button_play_title">Play</string>
    <string name="main_button_settings_title">Settings</string>
    <string name="main_button_instructions_title">Instructions</string>
    <string name="main_button_profile_title">Profile</string>
    <string name="main_button_exit_title">Exit</string>
    <string name="main_button_version_title">Version</string>
    <string name="main_toast_xmpp_setup_needed">XMPP setup is not yet done. Let\'s get this done first!</string>
    <string name="lobby_button_invite_title">Connect to Kiosk</string>
    <string name="lobby_button_ready_title">Ready</string>
    <string name="muc_button_send_title">Send</string>
    <string name="muc_editor_hint_title">Type in here</string>
    <string name="newgame_category_general">General</string>
    <string name="newgame_category_gamedetails">Game Details</string>
    <string name="newgame_category_tickets">Tickets</string>
    <string name="newgame_check_title_usepassword">Protect Game</string>
    <string name="newgame_dialog_title_maxplayers">Max Players</string>
    <string name="newgame_dialog_title_minplayers">Min Players</string>
    <string name="newgame_dialog_title_name">Name</string>
    <string name="newgame_dialog_title_password">Password</string>
    <string name="newgame_dialog_title_rounds">Rounds</string>
    <string name="newgame_dialog_title_starttimer">Start Timer (in s)</string>
    <string name="newgame_dialog_title_pollinginterval">Update Interval (in s)</string>
    <string name="newgame_edit_title_maxplayers">Max Players</string>
    <string name="newgame_edit_title_minplayers">Min Players</string>
    <string name="newgame_edit_title_name">Game Name</string>
    <string name="newgame_edit_title_password">Password</string>
    <string name="newgame_edit_title_rounds">Rounds</string>
    <string name="newgame_edit_title_starttimer">Start Timer</string>
    <string name="newgame_edit_title_pollinginterval">Location Updates</string>
    <string name="newgame_summary_maxplayers"></string>
    <string name="newgame_summary_minplayers"></string>
    <string name="newgame_summary_name"></string>
    <string name="newgame_summary_password"></string>
    <string name="newgame_summary_rounds"></string>
    <string name="newgame_summary_starttimer"></string>
    <string name="newgame_summary_pollinginterval"></string>
    <string name="settings_btn_mxa_title">MXA Settings</string>
    <string name="settings_btn_ok_title">OK</string>
    <string name="settings_dialog_title_serverjid">Server Coordinator Jid:</string>
    <string name="settings_dialog_title_username">Your Name:</string>
    <string name="settings_edit_title_serverjid">Server Coordinator Jid</string>
    <string name="settings_edit_title_username">Display Name</string>
    <string name="settings_edit_title_staticmode">Static Mode</string>
    <string name="settings_edit_title_logging">Logging</string>
    <string name="settings_edit_title_deletelogs">Delete Logfiles</string>
    <string name="settings_summary_serverjid">Not set</string>
    <string name="settings_summary_username">Not set</string>
    <string name="settings_summary_staticmode">play without location detection</string>
    <string name="settings_summary_logging">pipe logcat output into file</string>
    <string name="settings_summary_deletelogs">delete logfiles from sdcard/xhunt/logcat</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_version">Build Information</string>

</resources>