<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title="@string/newgame_category_gamedetails" >
        
		<EditTextPreference
			android:key="@string/bundle_key_newgame_rounds"
			android:title="@string/newgame_edit_title_rounds"
			android:dialogTitle="@string/newgame_dialog_title_rounds"
			android:summary="@string/newgame_summary_rounds" />
			
		<EditTextPreference
			android:key="@string/bundle_key_newgame_minplayers"
			android:title="@string/newgame_edit_title_minplayers"
			android:dialogTitle="@string/newgame_dialog_title_minplayers"
			android:summary="@string/newgame_summary_minplayers" />
			
		<EditTextPreference
			android:key="@string/bundle_key_newgame_maxplayers"
			android:title="@string/newgame_edit_title_maxplayers"
			android:dialogTitle="@string/newgame_dialog_title_maxplayers"
			android:summary="@string/newgame_summary_maxplayers" />
			
		<EditTextPreference
			android:key="@string/bundle_key_newgame_starttimer"
			android:title="@string/newgame_edit_title_starttimer"
			android:dialogTitle="@string/newgame_dialog_title_starttimer"
			android:summary="@string/newgame_summary_starttimer" />
		
		<EditTextPreference 
		    android:key="@string/bundle_key_newgame_pollinginterval"
		    android:title="@string/newgame_edit_title_pollinginterval"
		    android:dialogTitle="@string/newgame_dialog_title_pollinginterval"
		    android:summary="@string/newgame_summary_pollinginterval"
		     />
        
    </PreferenceCategory>
        
    <!--<PreferenceCategory
        android:title="@string/newgame_category_tickets" />  -->
    
</PreferenceScreen>
